Rename project from 'B.Tech Coding Roadmap' to 'Coding Roadmap'

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="B.Tech Coding Roadmap - A comprehensive 12-month learning journey for aspiring developers">
-    <title>B.Tech Coding Roadmap</title>
+    <meta name="description" content="Coding Roadmap - A comprehensive 12-month learning journey for aspiring developers">
+    <title>Coding Roadmap</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
             </button>
             <h1 class="app-title">
                 <i class="fas fa-code"></i>
-                B.Tech Coding Roadmap
+                Coding Roadmap
             </h1>
         </div>
     </nav>
